--- a/html/basic_html.html
+++ b/html/basic_html.html
@@ -23,10 +23,10 @@
            </ul>
 
 <h2>Work experience</h2>
-      <table border="1">
-        <thead>
-          <tr>
-            <th>Name</th>
+      <table border="1">                                                     <! --create a table-->
+        <thead>                                                                <! --table head -->
+          <tr>                                                                  <! --table row -->
+            <th>Name</th>                                                         <! --table data -->
             <th>Real name</th>
           </tr>
         </thead>
